# deutsch-ai-discovery

./: README.md  index.html  pyproject.toml
.cursor/rules/: grok-math-review.mdc
deutsch_ai_discovery/: __init__.py  agents.py  benchmark.py  experiment.py  gemini.py  models.py  openrouter.py  real_loop.py  real_model.py  scoring.py  world.py
docs/: index.html
reports/: benchmark_1_20.json  benchmark_1_20.md  benchmark_1_50.json  benchmark_1_50.md  real_loop_seed_17_gemini-2.5-flash.json  real_loop_seed_17_gemini-2.5-flash.md  real_model_seed_17_gemini-2.5-flash.json  real_model_seed_17_gemini-2.5-flash.md  report_seed_17.md  transcript_seed_17.json
tests/: test_experiment.py  test_real_loop.py  test_real_model.py
